<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/background"
    android:padding="12dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/user_profile_icon"
            android:src="@drawable/ic_user_profile" />

        <TextView
            android:id="@+id/friendName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="16sp"
            android:layout_marginStart="12dp"
            android:layout_gravity="center_vertical" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/view_on_map_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:backgroundTint="@color/purple_200"
            android:textColor="@color/white"
            android:text="@string/view_on_map" />

        <Button
            android:id="@+id/send_thoughts_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:backgroundTint="@color/energy_medium"
            android:textColor="@color/energy_low"
            android:text="Send Good Thoughts"
            android:layout_marginStart="8dp"
            tools:ignore="HardcodedText" />
    </LinearLayout>

</LinearLayout>